<resources>
    <string name="app_name">Ghana StartUps GPS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="andela_logo">Andela Logo</string>
    <string name="name">OPPONG AGYEI ENOCH</string>
    <string name="track">Username : \t  Joe</string>
    <string name="country">Country : \t Ghana</string>
    <string name="myemail">Email : \t oppongagyeienoch@gmail.com</string>
    <string name="tel">Phone Number : \t  +233240741137</string>
    <string name="slack_username">Slack Username : \t  @deejaypromzy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uname">user@email</string>
    <string name="title_activity_start">Start</string>
</resources>
