<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bbgg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardElevation="24dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        android:layout_gravity="center">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@drawable/btn_bg"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/user"
                        app:civ_border_color="@android:color/white"
                        app:civ_border_overlay="true"
                        app:civ_border_width="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="14dp"
                        android:fontFamily="serif"
                        android:text="@string/name"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>




                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scrollbars="none"
                    app:elevation="24dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/fab_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/fab_margin"
                            android:drawableEnd="@drawable/ic_world"
                            android:fontFamily="serif"
                            android:text="@string/country"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="@dimen/tv_size" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/view_hight"
                            android:background="@color/view_color" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/fab_margin"
                            android:drawableEnd="@drawable/ic_email"
                            android:fontFamily="serift"
                            android:text="@string/myemail"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="@dimen/tv_size" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/view_hight"
                            android:background="@color/view_color" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/fab_margin"
                            android:drawableEnd="@drawable/ic_phone"
                            android:fontFamily="serif"
                            android:text="@string/tel"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="@dimen/tv_size" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/view_hight"
                            android:background="@color/view_color" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/fab_margin"
                            android:drawableEnd="@drawable/ic_slack"
                            android:fontFamily="serift"
                            android:text="@string/slack_username"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="@dimen/tv_size" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/view_hight"
                            android:background="@color/view_color" />

                    </LinearLayout>
                </ScrollView>

            </LinearLayout>


    </android.support.v7.widget.CardView>


</FrameLayout>